# Autonomous-Robot-GT

./: README.md
collision_avoidance_base/: CMakeLists.txt  package.xml
collision_avoidance_base/launch/: ca_vs.launch
collision_avoidance_base/src/: collision_avoidance.cpp
face_detect/: CMakeLists.txt  mainpage.dox  package.xml
face_detect/launch/: face_detect.launch  face_detect_with_joy.launch
face_detect/nodes/: Marker.py  rosfacedetect.py
floor_graph/: CMakeLists.txt  graph-test.picklez  graph.picklez  package.xml
floor_graph/nodes/: build_graph-test.py  build_graph.py  viz_graph-test.py  viz_graph.py
floor_nav/: CMakeLists.txt  package.xml
floor_nav/cfg/: TaskGoTo.cfg  TaskGoToPose.cfg  TaskPlanTo.cfg  TaskSetHeading.cfg  TaskStareAtFace.cfg  TaskWaitForFace.cfg  TaskWaitForROI.cfg  TaskWander.cfg
floor_nav/include/floor_nav/: SimTasksEnv.h
floor_nav/launch/: launch_turtlebot.launch  launch_vrep-test.launch  launch_vrep.launch
floor_nav/missions/: graph_forever.py  mission_cond.py  test_goto.py  test_gotopose.py  test_graph-test.py  test_graph.py  test_planto.py  test_wander.py
floor_nav/msg/: RegionOfInterestArray.msg
floor_nav/src/: SimTasksEnv.cpp
floor_nav/tasks/: TaskGoTo.cpp  TaskGoTo.h  TaskGoToPose.cpp  TaskGoToPose.h  TaskPlanTo.cpp  TaskPlanTo.h  TaskSetHeading.cpp  TaskSetHeading.h  TaskStareAtFace.cpp  TaskStareAtFace.h  TaskWaitForAuto.cpp  TaskWaitForAuto.h  TaskWaitForFace.cpp  TaskWaitForFace.h  TaskWaitForROI.cpp  TaskWaitForROI.h  TaskWander.cpp  TaskWander.h
joystick/: CMakeLists.txt  package.xml
joystick/launch/: joy_control.launch
joystick/scripts/: joy_control
tb_slam/: CMakeLists.txt  README  package.xml  setup.py
tb_slam/launch/: bubble_slam.launch  costmap.launch  turtle_slam.launch
tb_slam/nodes/: turtle_slam.py  turtle_slam_singleids.py  turtle_slam_singleids_fixed.py
tb_slam/src/ar_slam_base/: mapping_kf.py
vrep_ros_teleop/launch/: teleop.launch  teleop_mux.launch  teleop_mux_teleop.launch
vrep_ros_teleop/src/: teleop.py
